styles/main.css
#intro-section {
    color: rgb(216, 132, 23);
    max-width: 100%;
    text-align: center;
}

body {
    background-color: papayawhip;
    font-family: 'Bangers', cursive;
    font-size: medium;
}

h1 {
    color: yellowgreen;
    font-family: 'ZCOOL KuaiLe', cursive;
    font-size: large;
    text-align: center;
}

.thin-grey-border {
    border-color: slategray;
    border-width: 5px;
    border-style: solid;
    border-radius: 10px;
}

img {
    max-width: 100%;
    height:auto
}

#title-image {
   float: right; 
   max-width: 30%;
   margin:0 15px 0 0;
}

